# supermod

./: .clang-format  .gitbook.yaml  .gitignore  .gitmodules  CMakeLists.txt  CODE_STYLE.md  LICENSE  README.md  build.bat  genclionproj.bat  genproj.bat  test.bat  xmake.lua
.github/workflows/: generate-docs.yml  release.yml  test.yml
docs/articles/: README.md  SUMMARY.md
docs/articles/lua/: assetPool.md  config.md  directx.md  events.md  filesystem.md  graphics.md  imgui.md  index.md  memory.md  timers.md  util.md
docs/scripts/: .gitignore  docComments.ts  generate.ts  markdown.ts  package-lock.json  package.json  source.ts  sourceFile.ts  tsconfig.json  utils.ts
docs/snippets/: imgui.md
libs/: bass.lib
libs/imgui-dx8/: imgui_impl_dx8.cpp
src/: CConfig.cpp  CConfig.h  CConsole.cpp  CConsole.h  CGUI.cpp  CGUI.h  CGameApis.h  CMemory.h  CModLoader.cpp  CModLoader.h  CModuleManager.cpp  CModuleManager.h  CWidescreenFix.h  Config.cpp  Config.h  Console.cpp  Console.h  CrashHandler.h  Data.h  DirectXUtils.cpp  DirectXUtils.h  Log.h  UpdateManager.cpp  UpdateManager.h  Utils.h  main.cpp  main.h
src/assets/: assets.h  assets.rc
src/d3d8/: d3d8.def  d3d8.hpp  d3d8helpers.h  d3d8to9_vertex_buffer.cpp
src/events/: D3dInitEvent.h  EventManager.cpp  EventManager.h  GameLoadedEvent.h  ModEvent.h  ResolutionChangeEvent.h  ResolveFileEvent.h  SoundHostInitEvent.h  SoundsLoadedEvent.h  StartExecutionEvent.h  TickEvent.h  UIRenderEvent.h  WindowEvent.h
src/exceptions/: Error.cpp  Error.h
src/game/: Asset.cpp  Asset.h  AssetPool.cpp  AssetPool.h  CachedFilePool.cpp  CachedFilePool.h  LocalizedStringPool.cpp  LocalizedStringPool.h  MenuPool.cpp  MenuPool.h  SoundHost.cpp  SoundHost.h
src/game/animations/: AnimationPool.cpp  AnimationPool.h
src/game/models/: ModelPool.cpp  ModelPool.h
src/game/textures/: JpgLoader.cpp  JpgLoader.h  PngLoader.h  TextureLoader.cpp  TextureLoader.h  TgaFileInterface.cpp  TgaFileInterface.h  TgaLoader.h
src/logs/: AnsiFileSink.h  Console.cpp  Console.h  LogLevelFormatterFlag.h
src/lua/: .luarc.json
src/lua/internal/: bootstrapper.lua
src/lua/plugin/: plugin.lua
src/memory/: HookManager.cpp  HookManager.h  Memory.h  MemoryCacheStorage.h
src/mod/: InternalMod.cpp  InternalMod.h  ModImplInternal.cpp  ModImplInternal.h
src/mod/modules/: AdaptiveResolutionModule.cpp  AdaptiveResolutionModule.h  ForwardGameLogsModule.cpp  ForwardGameLogsModule.h  FpsLimitModule.cpp  FpsLimitModule.h  LevelBackRenderFixModule.cpp  LevelBackRenderFixModule.h  RenderUnfocusedModule.cpp  RenderUnfocusedModule.h
src/modloader/: ModManager.cpp  ModManager.h
src/modloader/containers/: EventContainer.cpp  EventContainer.h  HookContainer.cpp  HookContainer.h  ModuleContainer.cpp  ModuleContainer.h
src/modloader/files/: ModFileResolver.cpp  ModFileResolver.h
src/modloader/install/: ModInstallRequest.h  ModInstallRequestDiscover.cpp  ModInstallRequestDiscover.h  ModInstallRequestZip.cpp  ModInstallRequestZip.h  ModInstaller.cpp  ModInstaller.h  ZipModDropTarget.cpp  ZipModDropTarget.h
src/modloader/mixins/: EventUser.cpp  EventUser.h  HookUser.cpp  HookUser.h
src/modloader/mod/: Mod.cpp  Mod.h
src/modloader/mods/: Mod.cpp  Mod.h  ModFileResolver.cpp  ModFileResolver.h  ModInfo.cpp  ModInfo.h  ModManager.cpp  ModManager.h  Module.cpp  Module.h
src/modloader_new/: ModManager.cpp  ModManager.h
src/modloader_new/files/: ModFileResolver.cpp  ModFileResolver.h
src/modloader_new/install/: ModInstallRequest.h  ModInstallRequestDiscover.h  ModInstallRequestZip.cpp  ModInstallRequestZip.h  ModInstaller.cpp  ModInstaller.h  ZipModDropTarget.cpp  ZipModDropTarget.h
src/modloader_new/mod/: Mod.cpp  Mod.h  ModImpl.h
src/mods/: CEarlyStats.h  CExtendGroundsLimit.h  CLadno.h  CPowerupsKill.h  CStartupSplash.h
src/module/: IMod.h  IModule.h  IPatch.h
src/patches/: AdaptiveResolutionPatch.cpp  AllowMultipleInstances.cpp  AllowMultipleInstancesPatch.cpp  AnimationPoolPatch.cpp  AssetPoolPatch.cpp  CAdditionalMusic.h  CAllowMultipleInstances.h  CEditor.h  CFpsLimit.h  CRenderUnfocused.h  CWidescreenFix.h  ConstSizeTexturePatch.cpp  CyrillicPathPatch.cpp  EditorControlsBugPatch.cpp  EditorFullscreenBugPatch.cpp  LevelBackRenderPatch.cpp  LevelMusicPatch.cpp  LoadGroundsPatch.cpp  LoadingFreezePatch.cpp  ModelPoolPatch.cpp  PersLimitPatch.cpp  PlatformRenderPatch.cpp  RenderUnfocusedPatch.cpp  TrophySceneCrash.cpp  TrophySceneCrashPatch.cpp
src/proxy/: dinput8.cpp  msimg32.cpp  msimg32.def
src/scripting/: LuaMod.cpp  LuaMod.h  LuaModEventHandler.h  ModImplLua.cpp  ModImplLua.h  luaassets.h  luaassets.rc
src/scripting/env/: .luarc.json  config.lua
src/sdk/: DirectX.cpp  DirectX.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h
src/supermod/: Config.cpp  Config.hpp  CrashHandler.hpp  DirectXUtils.cpp  DirectXUtils.hpp  ImGuiConfig.hpp  UpdateManager.cpp  UpdateManager.hpp  Utils.hpp  constants.hpp  data.hpp  main.cpp  main.h  pch.hpp  types.hpp
src/supermod/builtin/: ModImplBuiltin.cpp  ModImplBuiltin.hpp
src/supermod/events/: D3dInitEvent.hpp  DxInitEvent.hpp  DxResetEvent.hpp  EventManager.hpp  GameLoadedEvent.hpp  ModEvent.hpp  ResolutionChangeEvent.hpp  ResolveFileEvent.hpp  SoundHostInitEvent.hpp  SoundsLoadedEvent.hpp  StartExecutionEvent.hpp  TickEvent.hpp  UIRenderEvent.hpp  WindowEvent.hpp
src/supermod/exceptions/: Error.cpp  Error.hpp
src/supermod/game/: AssetPool.cpp  AssetPool.hpp  CachedFilePool.cpp  CachedFilePool.hpp  DirectX.cpp  DirectX.hpp  Game.cpp  Game.hpp  Graphics.cpp  Graphics.hpp  LocalizedStringPool.cpp  LocalizedStringPool.hpp  MenuPool.cpp  MenuPool.hpp  SoundHost.cpp  SoundHost.hpp
src/ui/: FontManager.cpp  FontManager.h  ImGuiWidgets.cpp  ImGuiWidgets.h  NotificationManager.cpp  NotificationManager.h  UI.cpp  UI.h  UIBoot.cpp  UIFonts.cpp  UIFonts.h  UIMenu.cpp  UIWatermark.cpp  Ui.cpp  Ui.h
src/utils/: OwnedZip.h  TempManager.cpp  TempManager.h  VersionRange.h
test/: demo.cpp  modloader.cpp  versionRange.cpp
test/lua/: filesystem.cpp
test/mock/: ModImplMock.h  ModImplMock.hpp
tools/: parse_com.js
(+263 files in other folders)
